добавил флаг -b --bdu для обработки уязвимости из БДУ ФСТЭК

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-click>=8.0.3
-pandas>=1.5.3
-python-dotenv>=0.19.2
-requests>=2.32.3
-termcolor>=2.2.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cve-prioritizer==1.9.0
+et_xmlfile==2.0.0
+idna==3.10
+numpy==2.2.5
+openpyxl==3.1.5
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+requests==2.32.3
+setuptools==78.1.1
+six==1.17.0
+termcolor==3.0.1
+tzdata==2025.2
+urllib3==2.4.0
